# tmixfit

./: .gitattributes  .gitignore  LICENSE  README.md  setup.cfg
derivation/: derivation.tm
src/: demo_loop.py  demo_vectorized.py  test.py
src/tmixfit/: __init__.py  stmm_abstract.py  stmm_loop.py  stmm_vectorized.py  utils.py
trash/: demo_loop.py
