[metadata]
name = tmixfit
version = 0.0.1
author = Zhihan Yang
author_email = yangz2@carleton.edu
description = Very fast Expectation Maximization for Student-t mixture models in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/zhihanyang2022/tmixfit
project_urls =
    Bug Tracker = https://github.com/zhihanyang2022/tmixfit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src